# Algorithm

./: .dockerignore  .env.test  .gitignore  Dockerfile  Dockerfile.fastapi  Dockerfile.nginx  docker-compose.cpp-test.yml  docker-compose.prod.yml  docker-compose.simple-test.yml  docker-compose.test.yml  docker-compose.yml  mc_raptor_algorithm_v_3.md  requirements.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml
.serena/: project.yml
.serena/memories/: android-emulator-websocket-navigation-testing.md  device-voice-input-endpoint-implementation.md  device-websocket-voice-input-api-specification.md  frontend-api-documentation.md  jwt-authentication-api.md  transit-routing-analysis.md  websocket-connection-review-and-optimization.md  websocket-horizontal-scaling-redis-pubsub-implementation-plan.md  websocket-redis-pubsub-unit-testing-plan.md
docs/: CPP_ENGINE_PERFORMANCE_TEST_GUIDE.md  QUICK_CPP_TEST_GUIDE.md
nginx/: nginx.conf
nginx/conf.d/: kindmap_api.conf
transit-routing/: .env.example  Dockerfile  anp_weights.py  anp_weights_old.py  config.py  database.py  distance_calculator.py  label.py  main.py  mc_raptor.py  navigation_service.py  pytest.ini  redis_client.py  requirements.txt  setup.py  test_pathfinding_fixes.py  test_routing_local.py  test_sample_routing.py  test_server.py  websocket_handler.py
transit-routing/app/: main.py
transit-routing/config/: .env.example
transit-routing/cpp_src/: CMakeLists.txt  bindings.cpp  data_loader.cpp  data_loader.h  engine.cpp  engine.h  pathfinding_cpp  types.h  utils.cpp  utils.h
(+68 files in other folders)
